RESOLVED FIXED193087
Fix resourcetimingbufferfull bubbles attribute
https://bugs.webkit.org/show_bug.cgi?id=193087
Summary Fix resourcetimingbufferfull bubbles attribute
cvazac
Reported 2019-01-02 12:39:59 PST
Fix resourcetimingbufferfull bubbles aatribute
Attachments
Patch (1.49 KB, patch)
2019-01-02 12:41 PST, cvazac
no flags
Patch (1.64 KB, patch)
2019-01-02 12:53 PST, cvazac
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.43 MB, application/zip)
2019-01-02 13:44 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (4.17 MB, application/zip)
2019-01-02 13:55 PST, EWS Watchlist
no flags
Patch (3.21 KB, patch)
2019-01-02 14:12 PST, cvazac
no flags
cvazac
Comment 1 2019-01-02 12:41:15 PST
EWS Watchlist
Comment 2 2019-01-02 12:43:18 PST
Attachment 358195 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
cvazac
Comment 3 2019-01-02 12:53:38 PST
cvazac
Comment 4 2019-01-02 12:55:01 PST
Per spec change [1], the `bubbles` attribute on `resourcetimingbufferfull` events should no longer be set to `true` [2]. [1] https://github.com/w3c/resource-timing/pull/168 [2] https://github.com/w3c/resource-timing/pull/168/files#diff-eacf331f0ffc35d4b482f1d15a887d3bL848
EWS Watchlist
Comment 5 2019-01-02 13:44:46 PST
Comment on attachment 358196 [details] Patch Attachment 358196 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/10607657 New failing tests: http/wpt/resource-timing/rt-performance-extensions.worker.html http/wpt/resource-timing/rt-performance-extensions.html
EWS Watchlist
Comment 6 2019-01-02 13:44:53 PST
Created attachment 358200 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2019-01-02 13:55:19 PST
Comment on attachment 358196 [details] Patch Attachment 358196 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10607696 New failing tests: http/wpt/resource-timing/rt-performance-extensions.worker.html http/wpt/resource-timing/rt-performance-extensions.html
EWS Watchlist
Comment 8 2019-01-02 13:55:21 PST
Created attachment 358201 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
cvazac
Comment 9 2019-01-02 14:12:16 PST
Chris Dumez
Comment 10 2019-01-02 15:16:03 PST
Comment on attachment 358203 [details] Patch r=me
WebKit Commit Bot
Comment 11 2019-01-02 15:42:04 PST
Comment on attachment 358203 [details] Patch Clearing flags on attachment: 358203 Committed r239579: <https://trac.webkit.org/changeset/239579>
WebKit Commit Bot
Comment 12 2019-01-02 15:42:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2019-01-02 15:43:26 PST
Note You need to log in before you can comment on or make changes to this bug.