Fix resourcetimingbufferfull bubbles attribute https://bugs.webkit.org/show_bug.cgi?id=193087

Patch by Charles Vazac <cvazac@gmail.com> on 2019-01-02
Reviewed by Chris Dumez.

Source/WebCore:

This change is covered by web-platform-tests [1].

[1] https://github.com/web-platform-tests/wpt/blob/master/resource-timing/buffer-full-when-populate-entries.html#L20

* page/Performance.cpp:
(WebCore::Performance::resourceTimingBufferFullTimerFired):

LayoutTests:

* http/wpt/resource-timing/rt-performance-extensions.js:
(promise_test):

Canonical link: https://commits.webkit.org/207610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239579 268f45cc-cd09-0410-ab3c-d52691b4dbfc